[package]
name = "plonky2_cuda"
version = "1.0.0"
authors = [ "unknown" ]
description = "gpu accelerate for plonky2"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies.cc]
version = "^1.0.70"

[build-dependencies.which]
version = "^4.0"
